syntax = "proto3";

package grpc.psychological_experiment.user_info_server;

option go_package = "github.com/PsychologicalExperiment/backEnd/api/user_info_server";

import "api/api_common/api_common.proto";

service UserService{
    // register a user
    rpc Register (RegisterReq) returns (RegisterRsp) {}
    // login a user
    rpc Login (LoginReq) returns (LoginRsp) {}
}

enum GenderType{
    GENDER_TYPE_INVALID = 0;
    // man
    GENDER_TYPE_MAN = 1;
    // woman
    GENDER_TYPE_WOMAN = 2;
}

message UserInfo{
    //email
    string email = 1;
    //phone number
    string phone_number = 2;
    //user name
    string user_name = 3;
    // gender
    uint32 gender = 4;
}

message RegisterReq{
    //user info
    UserInfo user_info = 1;
    //password
    string password = 2;
}

message RegisterRsp{
    // common rsp
    grpc.psychological_experiment.api_common.CommonRsp common_rsp = 1;
    // uin
    string uin = 2;
}

message LoginReq{
    //email
    string email = 1;
    //phone number
    string phone_number = 2;
    //password
    string password = 3;
}

message LoginRsp{
    // common rsp
    grpc.psychological_experiment.api_common.CommonRsp common_rsp = 1;
    // user info
    UserInfo user_info = 2;
}